landing page construction

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,49 +1,17 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-:root {
-  --primary-color: #c9d5b5;
-}
-
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+#root {
+  --primary-color: #c9d5b5;
+  height: 100%;
+  width: 100%;
 }
 
 .header {
@@ -94,4 +62,20 @@ footer div {
   font-size: 70px;
   text-align: center;
   color: cornflowerblue;
+}
+
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1573487482166-09cd477f7b3b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=562&q=80");
+  height: 800px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.button-hero > a {
+  background-color: white;
+  border: 2px solid yellow;
+  padding: 10px 20px;
+  color: black;
+  margin: 10px;
 }
