--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 * {
   margin: 0;
   padding: 0;
@@ -85,6 +84,10 @@ section {
   background-size: cover;
 }
 
+.button-hero {
+  margin: 2%;
+}
+
 .button-hero > a {
   background-color: white;
   border: 2px solid yellow;
@@ -113,5 +116,7 @@ h1 {
   margin: 0 auto;
   text-align: center;
 }
-=======
->>>>>>> 0c201f1e4a72a7886af868196279c4ba254d5b8e
+
+h2 {
+  color: white;
+}
