--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,29 @@ body,html,.App,#root,.outer {
   width:100%;
   height: 100%;
 }
+
+.outer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+
+.inner {
+  width: 450px;
+  margin: auto;
+  border-radius: 15px;
+}
+
+.outer .form-control:focus {
+  border-color: #3333;
+  box-shadow: none;
+}
+
+
+.outer h3 {
+  text-align:center;
+  margin:0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
