--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,11 @@ body,html,.App,#root,.outer {
   line-height: 1;
   padding-bottom: 20px;
 }
+
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1588281345136-9893252095bd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
+  height: 800px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
