--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,50 @@ body,html,.App,#root,.outer {
   line-height: 1;
   padding-bottom: 20px;
 }
+section {
+  border: none;
+  width: auto;
+  height: auto;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1588281345136-9893252095bd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
+  height: 800px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.heroTitle {
+  position: relative;
+}
+.button-hero {
+  margin: 2%;
+}
+
+.button-hero > a {
+  background-color: white;
+  border: 2px solid yellow;
+  padding: 10px 20px;
+  color: black;
+  margin: 10px;
+  justify-content: center;
+}
+
+.button-hero:hover {
+  opacity: 0.8;
+}
+
+h1 {
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h2 {
+  color: white;
+}
