--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --important: #8E9B90;
+  --interact: #7D80DA;
+  --dark: #363946;
+  --light: #FFE4F3;
+  --yellow: #FFE45E;
+  --orange: #EE964B;
+  --hover: #B89900;
+
+}
+
 * {
   box-sizing: border-box;
 }
@@ -10,7 +21,7 @@ body {
 }
 
 body,html,.App,#root,.outer {
-  width:100%;
+  width: 100%;
   height: 100%;
 }
 
@@ -32,41 +43,42 @@ body,html,.App,#root,.outer {
   box-shadow: none;
 }
 
-
 .outer h3 {
   text-align:center;
   margin:0;
   line-height: 1;
   padding-bottom: 20px;
 }
+
 section {
   border: none;
   width: auto;
   height: auto;
-}
-
-section {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .hero {
   background-image: url("https://images.unsplash.com/photo-1588281345136-9893252095bd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
   height: 800px;
   width: 100%;
   background-repeat: no-repeat;
-  background-size: cover;
 }
+
 .heroTitle {
-  position: relative;
+  color: var(--dark);
+  z-index: 999;
 }
+
 .button-hero {
-  margin: 2%;
+  margin: 30px;
+  z-index: 999;
 }
 
 .button-hero > a {
   background-color: white;
-  border: 2px solid yellow;
+  border: 2px solid var(--interact);
   padding: 10px 20px;
   color: black;
   margin: 10px;
@@ -81,23 +93,38 @@ section {
   padding: 20px;
 }
  
-.header {
+header {
   padding: 10px;
-  background: #edf2f4;
-  border-bottom: 1px solid #999;
+  background: var(--important);
+  border-bottom: 1px solid var(--important);
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.header a {
-  color: #0072ff;
+
+header a {
+  color: var(--yellow);
   text-decoration: none;
   margin-left: 20px;
   margin-right: 5px;
+  font-size: 20px;
+  display: flex;
 }
-.header a:hover {
-  color: #8a0f53;
+
+header a:hover {
+  color: var(--hover);
 }
-.header small {
-  color: #666;
+
+header small {
+  color: var(--important);
 }
-.header .active {
-  color: #2c7613;
+
+header .active {
+  color: var(--dark);
+}
+
+.navbar-brand h1{
+  
 }
