--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,3 +121,65 @@ h1 {
 h2 {
   color: white;
 }
+section {
+  border: none;
+  width: auto;
+  height: auto;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1588281345136-9893252095bd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
+  height: 800px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.heroTitle {
+  position: relative;
+}
+.button-hero {
+  margin: 2%;
+}
+
+.button-hero > a {
+  background-color: white;
+  border: 2px solid yellow;
+  padding: 10px 20px;
+  color: black;
+  margin: 10px;
+  justify-content: center;
+}
+
+.button-hero:hover {
+  opacity: 0.8;
+}
+
+.content {
+  padding: 20px;
+}
+ 
+.header {
+  padding: 10px;
+  background: #edf2f4;
+  border-bottom: 1px solid #999;
+}
+.header a {
+  color: #0072ff;
+  text-decoration: none;
+  margin-left: 20px;
+  margin-right: 5px;
+}
+.header a:hover {
+  color: #8a0f53;
+}
+.header small {
+  color: #666;
+}
+.header .active {
+  color: #2c7613;
+}
