--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,7 @@ body {
 body,html,.App,#root,.outer {
   width: 100%;
   height: 100%;
+  background-color: #CED3DC;
 }
 
 .outer {
@@ -44,8 +45,8 @@ body,html,.App,#root,.outer {
 }
 
 .outer h3 {
-  text-align:center;
-  margin:0;
+  text-align: center;
+  margin: 0;
   line-height: 1;
   padding-bottom: 20px;
 }
@@ -60,20 +61,17 @@ section {
 }
 
 .hero {
+  position: relative;
+  top: 200px;
   background-image: url("https://images.unsplash.com/photo-1588281345136-9893252095bd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZXhwbG9zaW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60");
-  height: 800px;
+  margin-bottom: 400px;
+  height: 338px;
   width: 100%;
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
 }
 
 .heroTitle {
   color: var(--dark);
-  z-index: 999;
-}
-
-.button-hero {
-  margin: 30px;
-  z-index: 999;
 }
 
 .button-hero > a {
@@ -105,11 +103,9 @@ header {
 }
 
 header a {
-  color: var(--yellow);
   text-decoration: none;
   margin-left: 20px;
   margin-right: 5px;
-  font-size: 20px;
   display: flex;
 }
 
@@ -123,8 +119,4 @@ header small {
 
 header .active {
   color: var(--dark);
-}
-
-.navbar-brand h1{
-  
 }
